--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <link href="./assets/css/style.index.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Task List</title>
 </head>
+
 <body>
     <main>
         <div id="taskList">
-            <h5>Favor adicionar um título a tarefa</h5>
+            <h5 id="taskEmpty" class="hidden">Favor adicionar um título a tarefa</h5>
             <input type="text" id="new-task" placeholder="Adicione uma nova tarefa">
-            <button id="butt1"><i class="fa-solid fa-plus"></i></button>
-
+            <button id="createTask" onclick="createTask()"><i class="fa-solid fa-plus"></i></button>
             <div id="postContainner">
-                <p id="postContant">#1</p>
-                <div id="buttons">
-                    <button id="completTask"><i class="fa-solid fa-check"></i></button>
-                    <button id="editTask" class=""><i class="fa-solid fa-pen"></i></button>
-                    <button id="removeTask"><i class="fa-solid fa-trash"></i></button>
-                </div>
+                <div id="postlist"></div>
             </div>
         </div>
     </main>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.index.js"></script>
 </body>
 
 </html>
